# sudoku-detection

./: .gitignore  README.md  pyproject.toml
src/sudoku_training/: __init__.py  __main__.py  config.py  detector.py  test.py
src/sudoku_training/cli/: __init__.py  commands.py
src/sudoku_training/data/: __init__.py  augmentation.py  loader.py
src/sudoku_training/dataset/: create_dataset.py
src/sudoku_training/models/: __init__.py  builder.py  converter.py
src/sudoku_training/training/: __init__.py  pipeline.py  trainer.py
