[project]
name = "sudoku-training"
version = "0.1.0"
description = ""
authors = [
    {name = "raphaellndr",email = "raph.landure@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "imutils (>=0.5.4,<0.6.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "tensorflow-macos (>=2.16.2,<3.0.0)",
    "tensorflow-metal (>=1.2.0,<2.0.0)",
    "click (>=8.2.1,<9.0.0)",
    "tf2onnx (>=1.16.1,<2.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "0.12.0"
mypy = "1.16.1"

[tool.poetry.scripts]
sudoku-train = "sudoku_training.cli.commands:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
